--- a/src/views/admin/alliances/update.pug
+++ b/src/views/admin/alliances/update.pug
@@ -9,7 +9,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/alliances") Alianzas
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Actualizar alianza
 
 
