--- a/src/views/admin/employees/list.pug
+++ b/src/views/admin/employees/list.pug
@@ -8,7 +8,7 @@ block breadcrumbItem
     li.breadcrumb-item
         a(href="/admin/home")
             i.feather.icon-home
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Empleados
 
 block content
@@ -16,11 +16,10 @@ block content
     
         include ../../common/buttonChangeView.pug
 
-        include ../../common/messages.pug
-
         .view-list
             .card
                 .card-header
+                    include ../../common/messages.pug
                     h5.card-title Lista de empleados
                 .card-body.table-responsive
                     table.table.table-bordered
