--- a/src/views/admin/alliances/details.pug
+++ b/src/views/admin/alliances/details.pug
@@ -6,7 +6,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/alliances") Alianzas
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Detalles de alianza
 block content
     section
