--- a/src/views/admin/business/update.pug
+++ b/src/views/admin/business/update.pug
@@ -10,7 +10,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/business") Empresas
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Editar empresa
 block content
     section
