--- a/src/views/admin/carousel/add.pug
+++ b/src/views/admin/carousel/add.pug
@@ -10,7 +10,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/carousel") Carousel
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Agregar imagen
 
 block content
