--- a/src/views/admin/employees/details.pug
+++ b/src/views/admin/employees/details.pug
@@ -6,7 +6,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/employees") Empleados
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Detalles de empleado
 block content
     section
