--- a/src/views/admin/employees/update.pug
+++ b/src/views/admin/employees/update.pug
@@ -10,7 +10,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/employees") Empleados
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Agregar empleado
 
 block content
