--- a/src/views/admin/icons/fontawesome.pug
+++ b/src/views/admin/icons/fontawesome.pug
@@ -6,7 +6,7 @@ block breadcrumbItem
     li.breadcrumb-item
         a(href="/admin/home")
             i.feather.icon-home
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Iconos
 
 block content
