--- a/src/views/admin/login.pug
+++ b/src/views/admin/login.pug
@@ -55,7 +55,7 @@
 							<div class="form-group text-left">
 								<div class="checkbox checkbox-primary d-inline">
 									<input type="checkbox" name="checkbox-fill-1" id="checkbox-fill-a1" checked="">
-									<label for="checkbox-fill-a1" class="cr"> Save credentials</label>
+									<label for="checkbox-fill-a1" class="cr"> Guardar credenciales</label>
 								</div>
 							</div>
 							<button type="submit" class="btn btn-primary mb-4">Entrar</button>
@@ -64,7 +64,7 @@
 				</div>
 				<div class="col-md-6 d-none d-md-block">
 					<img src="/public/img/cdmype.jpg" alt="" width="300" class="img-fluid bd-placeholder-img bd-placeholder-img-lg d-block m-auto">
-					<img src="../assets/images/logo.png" alt="" class="img-fluid img-logo-overlay">
+					<img src="../assets/images/LogoCDMYPE_logo-1.png" alt="" class="img-fluid img-logo-overlay">
 				</div>
 			</div>
 		</div>
