--- a/src/views/admin/services/update.pug
+++ b/src/views/admin/services/update.pug
@@ -9,7 +9,7 @@ block breadcrumbItem
             i.feather.icon-home
     li.breadcrumb-item
         a(href="/admin/services") Servicios
-    li.breadcrumb-item.active.font-italic
+    li.breadcrumb-item.active.font-italic.text-white-50
         span Editar servicio
 block content
     section
