file input updated, carousel module updated

--- a/src/views/admin/alliances/add.pug
+++ b/src/views/admin/alliances/add.pug
@@ -32,7 +32,7 @@ block content
                                     span.text-danger &nbsp; *
                                 .custom-file
                                     input(type="file" name="file" class="custom-file-input" id="customFile")
-                                    label(for="customFile" class="custom-file-label") Choose file
+                                    label(for="customFile" class="custom-file-label" data-browse="Buscar") Elije un archivo
                     .form-group
                         label(for="" class="font-weight-bold") Descripción
                             span.text-danger &nbsp; *
