--- a/src/views/admin/alliances/update.pug
+++ b/src/views/admin/alliances/update.pug
@@ -32,7 +32,7 @@ block content
                                         span.text-danger &nbsp; *
                                     .custom-file
                                         input(type="file" name="file" class="custom-file-input" id="customFile")
-                                        label(for="customFile" class="custom-file-label") Choose file
+                                        label(for="customFile" class="custom-file-label" data-browse="Buscar") Elije un archivo
                                 .col-sm-12.col-lg-6
                                     input(type="hidden" name="id" value= data.id )
                                     label(for="" class="font-weight-bold") Nombre
