--- a/src/views/admin/employees/update.pug
+++ b/src/views/admin/employees/update.pug
@@ -29,7 +29,7 @@ block content
                                 span.text-danger &nbsp; *
                             .custom-file
                                 input(type="file" name="file" class="custom-file-input" id="customFile")
-                                label(for="customFile" class="custom-file-label") Choose file
+                                label(for="customFile" class="custom-file-label" data-browse="Buscar") Elije un archivo
                         .col-sm-12.col-md-6.col-lg-8
                             .form-group
                                 input(type="hidden" name="id" value= data.id)
