--- a/src/views/admin/news/add.pug
+++ b/src/views/admin/news/add.pug
@@ -37,7 +37,7 @@ block content
                                     span.text-danger &nbsp; *
                                 .custom-file
                                     input(type="file" name="file" class="custom-file-input" id="customFile" multiple)
-                                    label(for="customFile" class="custom-file-label") Choose file
+                                    label(for="customFile" class="custom-file-label" data-browse="Buscar") Elije un archivo
                     .form-group
                         label(for="" class="font-weight-bold") Descripcion
                             | &nbsp;
