index section 2 bg color changed

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -36,7 +36,7 @@ block content
                         a(href="/services" class="btn btn-primary py-3 px-4 mr-1") Saber más
                         a(href="/services" class="btn btn-outline-secondary py-3 px-4") Nosotros
     //- section 3 - aplicar a asesoría
-    section.bg-orange
+    section.bg-white
         .container.custom-padding-1
             .row
                 .col-sm-12.col-lg-6
