--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -34,7 +34,7 @@ block content
                     span(class="d-block bg-secondary my-5" style="height: 6px; width: 80px")
                     div
                         a(href="/services" class="btn btn-primary py-3 px-4 mr-1") Saber más
-                        a(href="/services" class="btn btn-outline-secondary py-3 px-4") Nosotros
+                        a(href="/about" class="btn btn-outline-secondary py-3 px-4") Nosotros
     //- section 3 - aplicar a asesoría
     section.bg-white
         .container.custom-padding-1
