--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -33,8 +33,8 @@ block content
                     p.custom-line-height-1.paragraph-1 Como modelo de atención a micro y pequeñas empresas ponemos a tu  disposición diversos servicos para el crecimiento de tu empresa
                     span(class="d-block bg-secondary my-5" style="height: 6px; width: 80px")
                     div
-                        a(href="/services" class="btn btn-primary py-3 px-4 mr-1") Saber más
-                        a(href="/about" class="btn btn-outline-secondary py-3 px-4") Nosotros
+                        a(href="/servicios" class="btn btn-primary py-3 px-4 mr-1") Saber más
+                        a(href="/nosotros" class="btn btn-outline-secondary py-3 px-4") Nosotros
     //- section 3 - aplicar a asesoría
     section.bg-white
         .container.custom-padding-1
