contact to modified

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -138,4 +138,4 @@ block content
 block scripts
     script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js")
     script(src="/public/js/owl.js")
-    script(src="/public/js/formcontact.js")
+    script(src="/public/js/contactto.js")
